# HighlightReader

./: main.py  pyproject.toml  readme.md
src/config/: config.toml
src/logic/: __init__.py  logic.py
src/utils/: __init__.py  files.py  helpers.py
tests/: test_fiels_text.txt  test_files.py  test_story.py  test_story.txt
