[tool.poetry]
name = "highlight reader"
version = "1.0.0"
description = "Reads text from a file, hightlighting word to be read at a speed (word per minute)"
authors = ["Kamil Democko <kamil.democko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
colorama = "^0.4.6"
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
